<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ssalir">Salir</string>
    <string name="sregistrar">Registrar</string>
    <string name="sbuscar">Buscar</string>
    <string name="seditar">Actualizar</string>
    <string name="seliminar">Eliminar</string>
    <string name="slimpiar">Limpiar</string>


    <string name="app_name">MATERIAL LOAN</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Departamento de Recursos Materiales y Servicios</string>
    <string name="profe">ENCARGADO: L.A. Alberto Garcia Uriostegui</string>
    <string name="Nuevo_registro">Nuevo Registro</string>
    <string name="Consulta">Consulta</string>
    <string name="title_activity_splash_screen">Material Loan</string>
    <string name="title_activity_acercade">Acercade</string>

    <string name="Descripcion1">REGISTRO DE PRESTAMO DE MATERIAL</string>
    <string name="Clave_registro">CLAVE DE REGISTRO: </string>
    <string name="Fecha">FECHA: </string>
    <string name="dd_mm_aaaa">mm/dd/aaaa</string>
    <string name="seleccionar">Seleccionar Fecha</string>
    <string name="Nom_Alumno">NOMBRE DEL SOLICITANTE: </string>
    <string name="Carrera">CARRERA O ÁREA SOLICITANTE: </string>
    <string name="Descripcion">DESCRIPCIÓN: </string>
    <string name="Recibido">RECIBIDO</string>
    <string name="Entregado">ENTREGADO</string>

    <string name="title_activity_listaregistros">LISTA DE REGISTROS</string>

</resources>
